@@ -127,12 +127,12 @@ CREATE TABLE wkf_activity (
     subflow INTEGER,
     split_mode VARCHAR NOT NULL,
     join_mode VARCHAR NOT NULL,
-    kind VARCHAR NOT NULL,
     name VARCHAR NOT NULL,
     signal_send VARCHAR,
     flow_start BOOLEAN NOT NULL,
     flow_stop BOOLEAN NOT NULL,
-    action TEXT,
+    stop_other BOOLEAN NOT NULL,
+    action VARCHAR,
     PRIMARY KEY(id),
     FOREIGN KEY (workflow) REFERENCES wkf (id) ON DELETE CASCADE,
     FOREIGN KEY (subflow) REFERENCES wkf (id) ON DELETE SET NULL
