@@ -1,3 +1,4 @@
+* Remove use of python code in workflow XML
 * Remove ir.action.wizard_size
 * Rename expand and fill attributes into yexpand and yfill
 * Add xalign and yalign as field attributes
